test/src/e2e_vm_tests/test_programs/should_fail/better_type_error_message/src/main.sw
script;

use std::chain::auth::*;
use std::identity::*;
//use std::result::*;

fn bogus() -> Identity {
    let sender: Result<Identity, AuthError> = msg_sender();
    sender.unwrap()
}

fn main() {
}
